Fixes #13802, #13829, #13830.  Add default z-index of Tooltip and Overlay to 2000 to match TooltipDialog in dijit.  Add full screen cover to intercept click events that can close either.  The default is to close Tooltip but not Overlay.  When onclick outside the popup fires, Opener calls widget.onBlur.  If false is returned, then the widget ignores the click.  Anything else will cause widget.hide() to be called.
git-svn-id: http://svn.dojotoolkit.org/src/dojox/trunk@26586 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/mobile/themes/common/Tooltip.less
+++ b/mobile/themes/common/Tooltip.less
@@ -1,6 +1,7 @@
 /* dojox.mobile.Tooltip */
 .mblTooltip {
 	position: absolute;
+	z-index: 2000;
 	display: block;
 	margin: 0;
 	.mblTooltip-styles;
